--- a/programfag/engelsk/index.html
+++ b/programfag/engelsk/index.html
@@ -78,7 +78,8 @@ Du får en karakter i skriftlig og en karakter i muntlig. Det er som regel en mu
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
-                    <li><a href="https://www.udir.no/lk20/eng04-02/kompetansemaal-og-vurdering/kv300?lang=nob" target="_blank">Læreplan</a></li>
+                    <li><a href="https://snl.no/engelsk" target="_blank">SNL</a></li>
+                    <li><a href="https://www.udir.no/lk20/eng04-02/" target="_blank">Læreplan</a></li>
                 </div>
                 <!-- legg til interaktivt element her -->
                 <div class="divider-element">
@@ -140,7 +141,8 @@ Du får en karakter i skriftlig og en karakter i muntlig. Det er som regel en mu
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
-                    <li><a href="https://www.udir.no/lk20/eng04-02/kompetansemaal-og-vurdering/kv301?lang=nob" target="_blank">Læreplan</a></li>
+                    <li><a href="https://snl.no/engelsk" target="_blank">SNL</a></li>
+                    <li><a href="https://www.udir.no/lk20/eng04-02/" target="_blank">Læreplan</a></li>
                 </div>
                 <div class="divider-element">
 
