--- a/programfag/entreprenørskap/index.html
+++ b/programfag/entreprenørskap/index.html
@@ -90,7 +90,8 @@ konkurranser.
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
-                    <li><a href="https://www.udir.no/lk20/ent01-03/kompetansemaal-og-vurdering/kv526" target="_blank">Kompetansemål</a></li>
+                    <li><a href="https://snl.no/entrepren%C3%B8r_-_innovasjon" target="_blank">SNL</a></li>
+                    <li><a href="https://www.udir.no/lk20/ent01-03/" target="_blank">Læreplan</a></li>
                 </div>
                 <div class="divider-element"></div>
             </div>
@@ -142,7 +143,8 @@ konkurranser.
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
-                    <li><a href="https://www.udir.no/lk20/ent01-03/kompetansemaal-og-vurdering/kv527" target="_blank">Kompetansemål</a></li>
+                    <li><a href="https://snl.no/entrepren%C3%B8r_-_innovasjon" target="_blank">SNL</a></li>
+                    <li><a href="https://www.udir.no/lk20/ent01-03/" target="_blank">Læreplan</a></li>
                 </div>
                 <div class="divider-element"></div>
             </div>
