--- a/programfag/informasjonsteknologi/index.html
+++ b/programfag/informasjonsteknologi/index.html
@@ -93,8 +93,10 @@
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
+                    <li><a href="https://snl.no/IT" target="_blank">SNL</a></li>
+                    <li><a href="https://www.udir.no/lk20/inf01-02/" target="_blank">Læreplan</a></li>
                     <li><a href="https://denlilledatasiden.no/" target="_blank">Noen IT1 projekter</a></li>
-                    <li><a href="https://www.udir.no/lk20/inf01-02/kompetansemaal-og-vurdering/kv471" target="_blank">Læreplan</a></li>
+
                 </div>
                 <!-- legg til interaktivt element her -->
                 <div class="divider-element">
@@ -169,13 +171,14 @@
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
-                    <li><a href="https://www.udir.no/lk20/inf01-02/kompetansemaal-og-vurdering/kv472" target="_blank">Læreplan</a></li>
+                    <li><a href="https://snl.no/IT" target="_blank">SNL</a></li>
+                    <li><a href="https://www.udir.no/lk20/inf01-02/" target="_blank">Læreplan</a></li>
                 </div>
                 <div class="divider-element">
 
                 </div>
                 <div class="interaktivt-element">
-                    
+
                 </div>
             </div>
         </div>
@@ -184,6 +187,7 @@
         <!-- legg til flere prosjekter her -->
         <div class="flere-prosjekter">
             <h3>Flere prosjekter</h3>
+            <a href="https://it1-julekalenderen.w3spaces.com/" target="_blank" style="text-decoration: underline;">IT1 Julekalender</a>
         </div>
     </main>
     <!-- Footer -->
