--- a/programfag/tekforsk/index.html
+++ b/programfag/tekforsk/index.html
@@ -85,8 +85,10 @@
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
+                    <li><a href="https://snl.no/teknologi" target="_blank">SNL</a></li>
+                    <li><a href="https://www.udir.no/lk20/tnf01-02/" target="_blank">Læreplan</a></li>
                     <li><a href="https://andoyaspace.no/" target="_blank">Andøya space</a></li>
-                    <li><a href="https://www.udir.no/lk20/tnf01-02/kompetansemaal-og-vurdering/kv469" target="_blank">Læreplan</a></li>
+                    <li><a href="https://www.esa.int/" target="_blank">ESA</a></li>
                 </div>
                 <!-- legg til interaktivt element her -->
                 <div class="divider-element">
@@ -145,7 +147,8 @@
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
-                    <li><a href="https://www.udir.no/lk20/tnf01-02/kompetansemaal-og-vurdering/kv470" target="_blank">Læreplan</a></li>
+                    <li><a href="https://snl.no/teknologi" target="_blank">SNL</a></li>
+                    <li><a href="https://www.udir.no/lk20/tnf01-02/" target="_blank">Læreplan</a></li>
                 </div>
                 <div class="divider-element">
 
