--- a/programfag/hifi/index.html
+++ b/programfag/hifi/index.html
@@ -83,7 +83,9 @@
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
-                    <li><a href="https://www.udir.no/lk20/hif01-03/kompetansemaal-og-vurdering/kv520" target="_blank">Læreplan</a></li>
+                    <li><a href="https://snl.no/historie" target="_blank">SNL - Historie</a></li>
+                    <li><a href="https://snl.no/filosofi" target="_blank">SNL - Filosofi</a></li>
+                    <li><a href="https://www.udir.no/lk20/hif01-03/" target="_blank">Læreplan</a></li>
                 </div>
                 <!-- legg til interaktivt element her -->
                 <div class="divider-element">
