--- a/programfag/kinesisk2/index.html
+++ b/programfag/kinesisk2/index.html
@@ -83,7 +83,8 @@
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
-                    <li><a href="https://www.udir.no/lk20/psp01-03/kompetansemaal-og-vurdering/kv779?lang=nob target="_blank">Læreplan</a></li>
+                    <li><a href="https://snl.no/kinesisk" target="_blank">SNL</a></li>
+                    <li><a href="https://www.udir.no/lk20/psp01-03/" target="_blank">Læreplan</a></li>
                 </div>
                 <!-- legg til interaktivt element her -->
                 <div class="divider-element">
