--- a/programfag/engelsk/index.html
+++ b/programfag/engelsk/index.html
@@ -65,8 +65,8 @@ Du får en karakter i skriftlig og en karakter i muntlig. Det er som regel en mu
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/" alt="">
-                    <img src="../../assets/imgs/" alt="">
+                    <img src="../../assets/imgs/engelsk/britainflag.png" alt="">
+                    <img src="../../assets/imgs/engelsk/goldengate.png" alt="">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hvorfor ta Engelsk 1?</h3>
@@ -125,8 +125,8 @@ Du får en karakter i skriftlig og en karakter i muntlig. Det er som regel en mu
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/" alt="">
-                    <img src="../../assets/imgs/" alt="">
+                    <img src="../../assets/imgs/engelsk/buckinham.png" alt="">
+                    <img src="../../assets/imgs/engelsk/fone.png" alt="">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
