--- a/programfag/informasjonsteknologi/index.html
+++ b/programfag/informasjonsteknologi/index.html
@@ -178,7 +178,7 @@
 
                 </div>
                 <div class="interaktivt-element">
-
+                    <iframe src="../../widgets/it_quiz/index.html" width="510" height="570" style="border: none;"></iframe>
                 </div>
             </div>
         </div>
