--- a/programfag/s_matte/index.html
+++ b/programfag/s_matte/index.html
@@ -179,7 +179,7 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    <iframe src="../../widgets/tør_du_satse/index.html" width="510" height="430" style="border: none;"></iframe>
+                    <iframe src="../../widgets/s2_quiz/index.html" width="510" height="570" style="border: none;"></iframe>
                 </div>
             </div>
         </div>
