--- a/programfag/språk3/index.html
+++ b/programfag/språk3/index.html
@@ -1,1 +1,126 @@
-Språk3
+<!DOCTYPE html>
+<html lang="no">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../style/global.css">
+    <link rel="stylesheet" href="../../style/programfag.css">
+    <link rel="stylesheet" href="./språk3.css">
+    <link rel="icon" href="../../assets/icons/favicon.png" type="image/png">
+    <title>Språk 3</title>
+</head>
+<body>
+    <header>
+        <!-- toppseksjon av siden med et bakgrunnsbilde som kan endres i geofag.css-dokumentet -->
+        <div id="forside-bilde">
+            <h1>Språk 3</h1>
+            <!-- knapp tilbake til X -->
+            <a href="../../ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
+        </div>
+    </header>
+    <main>
+        <!-- kort informerende tekst om programfaget -->
+        <div id="intro-tekst">
+            <p>
+                Vil du forstå
+                samfunnet du lever i
+                bedre? Vil du jobbe
+                med helsefag Vil du
+                forske på sosiale
+                problemer eller være
+                med å utvikle den
+                moderne
+                velferdsstaten?
+            </p>
+            <p>
+                <b>Velg sosialkunnskap!</b>
+            </p>
+        </div>
+        <!-- bølgete linje -->
+        <div class="skillelinje"></div>
+        <!-- informasjon om programfaget -->
+        <div id="fagnummer1" class="fag-informasjon">
+            <h2>Språk 3</h2>
+            <div class="informasjonsbokser">
+                <div class="rask-oversikt">
+                    <h3>Rask oversikt</h3>
+                    <li>Eksamensform: <b>Skriftlig eller muntlig</b></li>
+                    <li>Bygger på andre fag: <b>Nei</b></li>
+                    <li>Gir fordypning i SSØ sammen ett av fagene: <b>
+                        <li>Sosiologi & sosialantropologi</li>
+                        <li>Samfunnsgeografi</li>
+                        <li>Politikk & menneskerettigheter</li>
+                        </b>
+                    </li>
+                </div>
+                <div class="sentrale-temaer">
+                    <h3>Sentrale temaer</h3>
+                    <ul>
+                        <li><b>SPRÅK</b></li>
+                        <li>Du lærer å bruke språket både skriftlig og muntlig. Vi bygger på det du har lært og legger mye vekt på kommunikasjon.</li>
+                        <li><b>KULTUR</b></li>
+                        <li>Du lærer å snakke og skrive om landets kultur. Og du lærer å lese autentiske tekster.</li>
+                        <li><b>EKSTRA STUDIEPOENG</b></li>
+                        <li>Programfag III i fremmedspråk gir deg ekstra studiepoeng</li>
+                        <li><b>STUDIETUR</b></li>
+                        <li>På vårparten tilbyr skolen en ukes studietur til en språkskole til målspråkslandet</li>
+                    </ul>
+                </div>
+                <div class="visuelt-element">
+                </div>
+                <div class="hvordan-jobber-vi">
+                    <h3>Hvordan jobber vi?</h3>
+                    <p>
+                        I fremmedspråkprogramfag
+                        bygger vi videre på det du lærte 
+                       på nivå II. Vi har mye muntlig 
+                       praktisering i timene i form av 
+                       diskusjoner, samtaler, 
+                       presentasjoner, og andre 
+                       morsomme aktiviteter. Vi leser 
+                       ulike autentiske tekster som 
+                       avisartikler, noveller, romaner og 
+                       dikt på målspråket og vi skriver 
+                       forskjellige typer tekster.
+                        Vi repeterer også grammatikk fra 
+                       nivå II, og jobber videre med 
+                       dette temaet. Videre ser vi filmer 
+                       med undertekster på spansk, 
+                       fransk, tysk, hvor vi analyserer og 
+                       drøfter temaene både skriftlig og 
+                       muntlig
+                    </p>
+                    <p>
+                        Du vil lære mye om ulike 
+                        kulturuttrykk,og om kulturelle 
+                        forskjeller og likheter.
+                    </p>
+                </div>
+                <!-- elementer kan legges til eller fjernes -->
+                <div class="avlangt-visuelt-element">
+                    <img src="../../assets/imgs/språk3/tysk-flagg.png" alt="Tysk flagg">
+                    <img src="../../assets/imgs/språk3/fransk-flagg.png" alt="Fransk flagg">
+                </div>
+                <div class="elev-sitat">
+                    <h3>Hva mener elevene?</h3>
+                    <p>
+                        Det er lurt å kunne et språk ordentlig slik at du kan bruke det senere. Det er både nyttig og hyggelig.
+                    </p>
+                </div>
+                <div class="mer-informasjon">
+                    <h3>Aktuelle lenker</h3>
+                    <li><a href="https://snl.no/språk" target="_blank">Les mer på SNL</a></li>
+                    <li><a href="https://www.udir.no/lk20/psp01-03/kompetansemaal-og-vurdering/kv780" target="_blank">Læreplan</a></li>
+                </div>
+                <!-- legg til interaktivt element her -->
+                <div class="divider-element">
+                </div>
+            </div>
+        </div>
+    </main>
+    <!-- Footer -->
+    <div id="footer-placeholder"></div>
+    <script src="../../script/footer.js"></script>
+    <script src="../../script/global.js"></script>
+</body>
+</html>
