--- a/ssø/index.html
+++ b/ssø/index.html
@@ -72,8 +72,8 @@
                     <p>Politikk og menneskerettigheter</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/entreprenørskap/" class="fag_i_meny">
-                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                <a href="../programfag/språk3/" class="fag_i_meny">
+                    <img src="../assets/imgs/språk3/spansk-flagg-vind.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Språk 3</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
@@ -182,11 +182,11 @@
                 <img src="../assets/imgs/pom/freedom_tagget.png" class="fag-bilde">
             </div>
             <div class="fag-element">
-                <img src="../assets/imgs/" class="fag-bilde">
+                <img src="../assets/imgs/språk3/spansk-flagg-vind.png" class="fag-bilde">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Språk 3</h3>
                     <p class="fag-beskrivelse"></p>
-                    <p class="fag-sitat"></p>
+                    <p class="fag-sitat">"Hvis du snakker til en mann på et språk han forstår, når du hodet hans. Snakker du til ham på hans eget språk, når du hjertet" - Nelson Mandela</p>
                     <a class ="fag-se-mer-knapp" href="../programfag/språk3/">Se mer →</a>
                 </div>
             </div>
