Fikset rask oversikt og intro til språk 3

--- a/programfag/språk3/index.html
+++ b/programfag/språk3/index.html
@@ -22,18 +22,7 @@
         <!-- kort informerende tekst om programfaget -->
         <div id="intro-tekst">
             <p>
-                Vil du forstå
-                samfunnet du lever i
-                bedre? Vil du jobbe
-                med helsefag Vil du
-                forske på sosiale
-                problemer eller være
-                med å utvikle den
-                moderne
-                velferdsstaten?
-            </p>
-            <p>
-                <b>Velg sosialkunnskap!</b>
+                I språk 3 lærer du både å kommunisere bedre på språket ditt, i tillegg til at du lærer om kulturen, får dra på en språkreise til en språkskole i morsmålslandet <em>og</em> får et halvt studiepoeng!
             </p>
         </div>
         <!-- bølgete linje -->
@@ -44,14 +33,9 @@
             <div class="informasjonsbokser">
                 <div class="rask-oversikt">
                     <h3>Rask oversikt</h3>
+                    <li>Studiepoeng: <b>0.5</b></li>
                     <li>Eksamensform: <b>Skriftlig eller muntlig</b></li>
-                    <li>Bygger på andre fag: <b>Nei</b></li>
-                    <li>Gir fordypning i SSØ sammen ett av fagene: <b>
-                        <li>Sosiologi & sosialantropologi</li>
-                        <li>Samfunnsgeografi</li>
-                        <li>Politikk & menneskerettigheter</li>
-                        </b>
-                    </li>
+                    <li>Bygger på andre fag: <b>Ja, språk 2</b></li>
                 </div>
                 <div class="sentrale-temaer">
                     <h3>Sentrale temaer</h3>
