R-matte-bilder fikset!
Jeg vil også være med på å programmere lørdag kveld! :D

--- a/programfag/r_matte/index.html
+++ b/programfag/r_matte/index.html
@@ -95,8 +95,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/matte_r/matte_r_placeholder.png" alt="Placeholder R-matte">
-                    <img src="../../assets/imgs/matte_r/matte_r_placeholder.png" alt="Placeholder R-matte">
+                    <img src="../../assets/imgs/matte_r/mer_matte.png" alt="Placeholder R-matte">
+                    <img src="../../assets/imgs/matte_r/numerisk.png" alt="Placeholder R-matte" id="bilde2">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -184,7 +184,7 @@
                 </div>
                 <div class="avlangt-visuelt-element">
                     <img src="../../assets/imgs/matte_r/geogebra_spiral.png" alt="Placeholder R-matte">
-                    <img src="../../assets/imgs/matte_r/matte_r_placeholder.png" alt="Placeholder R-matte">
+                    <img src="../../assets/imgs/matte_r/matte_på_spansk.png" alt="Placeholder R-matte">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
