Simpel start på idrettsfag og kanskje fikset matte-lenke tilbake til ssø

--- a/idrettsfag/index.html
+++ b/idrettsfag/index.html
@@ -43,13 +43,18 @@
             <div id="fag_meny">
                 <!-- om antall fag endres, må også css endres (grid_template_columns) -->
                 <a href="../programfag/" class="fag_i_meny">
-                    <img src="../assets/imgs/" alt="test bilde" class="fagmeny_bilde">
-                    <p></p>
+                    <img src="../assets/imgs/friluftsliv/Tur-i-fjell-mye-sol.png" alt="test bilde" class="fagmeny_bilde">
+                    <p>Friluftsliv 1</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/" class="fag_i_meny">
-                    <img src="../assets/imgs/" alt="test bilde" class="fagmeny_bilde">
-                    <p></p>
+                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <p>Breddeidrett</p>
+                    <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="../programfag/" class="fag_i_meny">
+                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <p>E-sport</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
             </div>
@@ -64,7 +69,7 @@
             <div class="fag-element">
                 <img src="../assets/imgs/" class="fag-bilde">
                 <div class="fag-info">
-                    <h3 class="fag-tittel"></h3>
+                    <h3 class="fag-tittel">Friluftsliv 1</h3>
                     <p class="fag-beskrivelse"></p>
                     <p class="fag-sitat">"" - Person</p>
                     <a class ="fag-se-mer-knapp" href="../programfag/">Se mer →</a>
@@ -72,12 +77,21 @@
             </div>
             <div class="fag-element">
                 <div class="fag-info">
-                    <h3 class="fag-tittel"></h3>
+                    <h3 class="fag-tittel">Breddeidrett</h3>
                     <p class="fag-beskrivelse"></p>
                     <p class="fag-sitat">"" - Person</p>
                     <a class ="fag-se-mer-knapp" href="../programfag/">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/" class="fag-bilde">
+            </div>
+            <div class="fag-element">
+                <img src="../assets/imgs/" class="fag-bilde">
+                <div class="fag-info">
+                    <h3 class="fag-tittel">E-sport</h3>
+                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-sitat">"" - Person</p>
+                    <a class ="fag-se-mer-knapp" href="../programfag/">Se mer →</a>
+                </div>
             </div>
         </div>
     </main>
