Bla-knappen i menyen fjernes om menyen er mindre enn skjermbredden
Fikset det endelig :D
La også til noen bilder til idrettsfag

--- a/idrettsfag/index.html
+++ b/idrettsfag/index.html
@@ -44,16 +44,16 @@
                 <!-- om antall fag endres, må også css endres (grid_template_columns) -->
                 <a href="../programfag/" class="fag_i_meny">
                     <img src="../assets/imgs/friluftsliv/Tur-i-fjell-mye-sol.png" alt="test bilde" class="fagmeny_bilde">
-                    <p>Friluftsliv 1</p>
+                    <p>Friluftsliv</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/" class="fag_i_meny">
-                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/breddeidrett/forskjellige-baller.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Breddeidrett</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/" class="fag_i_meny">
-                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/e-sport/gutt-som-gamer.png" alt="test bilde" class="fagmeny_bilde">
                     <p>E-sport</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
@@ -67,9 +67,9 @@
         <!-- For å fjerne fag, slett den "fag-element" diven du vil fjerne. -->
         <div id="fag-oversikt">
             <div class="fag-element">
-                <img src="../assets/imgs/" class="fag-bilde">
+                <img src="../assets/imgs/friluftsliv/Tur-i-fjell-mye-sol.png" class="fag-bilde">
                 <div class="fag-info">
-                    <h3 class="fag-tittel">Friluftsliv 1</h3>
+                    <h3 class="fag-tittel">Friluftsliv</h3>
                     <p class="fag-beskrivelse"></p>
                     <p class="fag-sitat">"" - Person</p>
                     <a class ="fag-se-mer-knapp" href="../programfag/">Se mer →</a>
@@ -82,10 +82,10 @@
                     <p class="fag-sitat">"" - Person</p>
                     <a class ="fag-se-mer-knapp" href="../programfag/">Se mer →</a>
                 </div>
-                <img src="../assets/imgs/" class="fag-bilde">
+                <img src="../assets/imgs/breddeidrett/forskjellige-baller.png" class="fag-bilde">
             </div>
             <div class="fag-element">
-                <img src="../assets/imgs/" class="fag-bilde">
+                <img src="../assets/imgs/e-sport/gutt-som-gamer.png" class="fag-bilde">
                 <div class="fag-info">
                     <h3 class="fag-tittel">E-sport</h3>
                     <p class="fag-beskrivelse"></p>
