Kommenterte kode til kjemi-spill og la til tekst på drag-and-drop-spill om at man ikke kan spille det på alle enheter.
Kodekommentering i denne økonomien!? (Så forresten at GitHub rangerer folk etter hvor mange commits de har og jeg er på tredje, så her er en til for å hjelpe statistikken)

--- a/widgets/drag_and_drop_kjemi_spill/index.html
+++ b/widgets/drag_and_drop_kjemi_spill/index.html
@@ -11,7 +11,7 @@
 
     <!-- Tekst som vises når skjermbredden er for liten -->
     <div id="for-liten-bredde">
-        <p>Skjermbredden din er for liten til å spille spillet. Roter skjermen eller øk størrelsen på vinduet.</p>
+        <p>Skjermbredden din er for liten til å spille spillet. Roter skjermen eller øk størrelsen på vinduet. Dette spillet funker desverre ikke for alle enheter</p>
     </div>
 
     <!-- Spill-element (skjules når iframe-bredden er under 520 px) -->
