Begynte på MK-siden
La inn litt tekst

--- a/mk/index.html
+++ b/mk/index.html
@@ -43,13 +43,43 @@
             <div id="fag_meny">
                 <!-- om antall fag endres, må også css endres (grid_template_columns) -->
                 <a href="../programfag/" class="fag_i_meny">
-                    <img src="../assets/imgs/" alt="test bilde" class="fagmeny_bilde">
-                    <p></p>
+                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <p>Bilde (foto)</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/" class="fag_i_meny">
-                    <img src="../assets/imgs/" alt="test bilde" class="fagmeny_bilde">
-                    <p></p>
+                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <p>Bilde (film)</p>
+                    <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="../programfag/" class="fag_i_meny">
+                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <p>Bilde (VFX animasjon)</p>
+                    <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="../programfag/" class="fag_i_meny">
+                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <p>Grafisk design</p>
+                    <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="../programfag/" class="fag_i_meny">
+                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <p>Lyddesign</p>
+                    <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="../programfag/" class="fag_i_meny">
+                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <p>Tekst - Journalistikk, manus og tekstforfatter</p>
+                    <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="../programfag/" class="fag_i_meny">
+                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <p>Medieutvikling</p>
+                    <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="../programfag/" class="fag_i_meny">
+                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <p>Mediespesialisering</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
             </div>
