Fikset fordypninger i SSØ

--- a/programfag/samfunnsgeografi/index.html
+++ b/programfag/samfunnsgeografi/index.html
@@ -35,6 +35,12 @@
                     <h3>Rask oversikt</h3>
                     <li>Eksamensform: <b>Muntlig</b></li>
                     <li>Bygger på andre fag: <b>Nei</b></li>
+                    <li>Gir fordypning i SSØ sammen ett av fagene: <b>
+                        <li>Sosiologi & sosialantropologi</li>
+                        <li>Sosialkunnskap</li>
+                        <li>Politikk & menneskerettigheter</li>
+                        </b>
+                    </li>
                 </div>
                 <div class="sentrale-temaer">
                     <h3>Sentrale temaer</h3>
