Riktige lenker udir og snl

--- a/programfag/sosialkunnskap/index.html
+++ b/programfag/sosialkunnskap/index.html
@@ -115,7 +115,8 @@
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
-                    <li><a href="https://www.udir.no/lk20/hif01-03/kompetansemaal-og-vurdering/kv520" target="_blank">Læreplan</a></li>
+                    <li><a href="https://snl.no/samfunn" target="_blank">Les mer på SNL</a></li>
+                    <li><a href="https://www.udir.no/lk20/pos02-01" target="_blank">Læreplan</a></li>
                 </div>
                 <!-- legg til interaktivt element her -->
                 <div class="divider-element">
