--- a/programfag/pom/index.html
+++ b/programfag/pom/index.html
@@ -87,7 +87,8 @@
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
-                    <li><a href="https://www.udir.no/lk20/hif01-03/kompetansemaal-og-vurdering/kv520" target="_blank">Læreplan</a></li>
+                    <li><a href="https://snl.no/menneskerettigheter" target="_blank">Les mer på SNL</a></li>
+                    <li><a href="https://www.udir.no/lk20/pos05-01" target="_blank">Læreplan</a></li>
                 </div>
                 <!-- legg til interaktivt element her -->
                 <div class="divider-element">
