La til tidligere sider til kda (av de som fortsatt eksisterte)

--- a/programfag/design_og_bærekraft/index.html
+++ b/programfag/design_og_bærekraft/index.html
@@ -82,6 +82,7 @@
                     <h3>Aktuelle lenker</h3>
                     <li><a href="https://snl.no/b%C3%A6rekraftig_design" target="_blank">Les mer på SNL</a></li>
                     <li><a href="https://www.udir.no/lk20/kda04-02" target="_blank">Læreplan</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=q2QPywjVhX4" target="_blank">Tidligere side</a></li>
                 </div>
                 <!-- legg til interaktivt element her -->
                 <div class="divider-element">
