--- a/programfag/foto_og_grafikk/index.html
+++ b/programfag/foto_og_grafikk/index.html
@@ -78,6 +78,7 @@
                     <h3>Aktuelle lenker</h3>
                     <li><a href="https://snl.no/fotografi" target="_blank">Les mer på SNL</a></li>
                     <li><a href="https://www.udir.no/lk20/kda06-02" target="_blank">Læreplan</a></li>
+                    <li><a href="https://express.adobe.com/page/9l3qy4QzYS0pa/" target="_blank">Tidligere side</a></li>
                 </div>
                 <!-- legg til interaktivt element her -->
                 <div class="divider-element">
