Flyttet bilder, fikset mk-overskrift, startet på sosiologi og sosialantropologi

--- a/mk/index.html
+++ b/mk/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/global.css">
-    <link rel="stylesheet" href="./mk_oversikt.css">
     <link rel="stylesheet" href="../style/forside.css">
+    <link rel="stylesheet" href="./mk_oversikt.css">
     <link rel="icon" href="../assets/icons/favicon.png" type="image/png">
     <title>Medier og kommunikasjon</title>
 </head>
@@ -113,7 +113,7 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="../script/footer.js"></script>
+    <!-- <script src="../script/footer.js"></script> -->
     <script src="../script/global.js"></script>
     <script src="../script/forside.js"></script>
 </body>
