--- a/ssø/index.html
+++ b/ssø/index.html
@@ -97,9 +97,9 @@
                     <p>Samfunnsøkonomi</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/sosialkunnskap/" class="fag_i_meny">
-                    <img src="../assets/imgs/sosialkunnskap/statue_leser.png" alt="test bilde" class="fagmeny_bilde">
-                    <p>Sosialkunnskap</p>
+                <a href="../programfag/sosiologi_og_sosialantropologi/" class="fag_i_meny">
+                    <img src="../assets/imgs/sosiologi_og_sosialantropologi/statue_leser.png" alt="test bilde" class="fagmeny_bilde">
+                    <p>Sosiologi og sosialantropologi</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/r_matte/" class="fag_i_meny" class="matte-fag">
@@ -236,25 +236,20 @@
             </div>
             <div class="fag-element">
                 <div class="fag-info">
-                    <h3 class="fag-tittel">Sosialkunnskap</h3>
+                    <h3 class="fag-tittel">Sosiologi og sosialantropologi</h3>
                     <p class="fag-beskrivelse"><p>
-                        Vil du forstå
-                        samfunnet du lever i
-                        bedre? Vil du jobbe
-                        med helsefag Vil du
-                        forske på sosiale
-                        problemer eller være
-                        med å utvikle den
-                        moderne
-                        velferdsstaten?
+                        Sosiologi & sosialantropologi er et engasjerende fag. For eksempel bruker 
+                        du dine egne livserfaringer for å kaste lys over problemstillingene som 
+                        blir tatt opp i timene. Elever og lærer analyserer sammen de sosiale 
+                        prosessene vi alle er en del av. Liker du å diskutere og drøfte utfordringer 
+                        knyttet til sosiale relasjoner? Er du nysgjerrig og ønsker å lære deg 
+                        verktøy for å kunne utforske og finne svar? Da er dette faget midt i 
+                        blinken for deg.
                     </p>
-                    <br>
-                    <p>
-                        <b>Velg sosialkunnskap!</b>
                     <p class="fag-sitat"></p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/sosialkunnskap/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../programfag/sosiologi_og_sosialantropologi/">Se mer →</a>
                 </div>
-                <img src="../assets/imgs/sosialkunnskap/statue_leser.png" class="fag-bilde">
+                <img src="../assets/imgs/sosiologi_og_sosialantropologi/statue_leser.png" class="fag-bilde">
             </div>
             <div class="fag-element">
                 <img src="../assets/imgs/matte_r/matte_r_placeholder.png" class="fag-bilde">
