Ferdig (nok?) sosiologi og sosialantropologi

--- a/mk/index.html
+++ b/mk/index.html
@@ -113,7 +113,7 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <!-- <script src="../script/footer.js"></script> -->
+    <script src="../script/footer.js"></script>
     <script src="../script/global.js"></script>
     <script src="../script/forside.js"></script>
 </body>
