--- a/programfag/sosiologi_og_sosialantropologi/index.html
+++ b/programfag/sosiologi_og_sosialantropologi/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../style/global.css">
     <link rel="stylesheet" href="../../style/programfag.css">
-    <link rel="stylesheet" href="./sosialkunnskap.css">
+    <link rel="stylesheet" href="./sos.css">
     <link rel="icon" href="../../assets/icons/favicon.png" type="image/png">
     <title>Sosiologi & sosialantropologi</title>
 </head>
@@ -39,7 +39,7 @@
             <div class="informasjonsbokser">
                 <div class="rask-oversikt">
                     <h3>Rask oversikt</h3>
-                    <li>Eksamensform: <b>Skriftlig eller muntlig</b></li>
+                    <li>Eksamensform: <b>Muntlig</b></li>
                     <li>Bygger på andre fag: <b>Nei</b></li>
                     <li>Gir fordypning i SSØ sammen ett av fagene: 
                         <b>
@@ -111,31 +111,23 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/sosialkunnskap/Barn_holder_hender_ikon.png" alt="Placeholder">
-                    <img src="../../assets/imgs/sosialkunnskap/trist_mann.png" alt="Placeholder">
+                    <img src="../../assets/imgs/sosiologi_og_sosialantropologi/Barn_holder_hender_ikon.png" alt="Placeholder">
+                    <img src="../../assets/imgs/sosiologi_og_sosialantropologi/trist_mann.png" alt="Placeholder">
                 </div>
                 <div class="elev-sitat">
-                    <h3>Sentrale spørsmål</h3>
-                    <p>
-                        Hvorfor
-                        blir noen
-                        kriminelle?
-                        Hvorfor er noen
-                        rikere enn andre? Hvorfor ble
-                        foreldrene dine oppdratt
-                        annerledes enn deg? Hvorfor
-                        har vi en velferdsstat? Hva er
-                        grunnlaget for et godt liv?
-                        Hvordan
-                        gjennomfører vi en
-                        samfunnsvitenskapelig
-                        undersøkelse?
-                    </p>
+                    <h3>Hvorfor velge sosiologi & sosialantropologi?</h3>
+                    <ul>
+                        <li>Det er et engasjerende og spennende fag</li>
+                        <li>Verktøyene du lærer er svært nyttig for videre studier</li>
+                        <li>Du lærer mye om kildekritikk og opparbeider evne til å analysere og vurdere egen og andres forskning</li>
+                        <li>Du lærer hva det vil si å drøfte på en god måte</li>
+                        <li>Du får anledning til å fordype deg i og utforske dagsaktuelle spørsmål og utfordringer samfunnet i dag står overfor</li>
+                    </ul>
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
-                    <li><a href="https://snl.no/samfunn" target="_blank">Les mer på SNL</a></li>
-                    <li><a href="https://www.udir.no/lk20/pos02-01" target="_blank">Læreplan</a></li>
+                    <li><a href="https://snl.no/sosiologi" target="_blank">Les mer på SNL</a></li>
+                    <li><a href="https://www.udir.no/lk20/pos04-01" target="_blank">Læreplan</a></li>
                 </div>
                 <!-- legg til interaktivt element her -->
                 <div class="divider-element">
