La til iframe til satse-spill

--- a/programfag/s_matte/index.html
+++ b/programfag/s_matte/index.html
@@ -108,7 +108,9 @@
                 <div class="divider-element">
 
                 </div>
-                <div class="interaktivt-element"></div>
+                <div class="interaktivt-element">
+                    <iframe src="../../widgets/tør_du_satse/index.html" width="510" height="570" style="border: none;"></iframe>
+                </div>
             </div>
         </div>
         <!-- bølgete linje -->
